# holes-in-elections

./: .gitignore  requirements.txt
approval_l1/: .gitignore  CMakeLists.txt  basin_hopping.py  basinhopping-gurobiexperiments.ipynb  brute.cpp  comparison.ipynb  comparison_one_step.ipynb  comparisons_to_gurobi.py  comparisons_to_reference.py  farthest_elections.py  farthest_elections_gorobi.py  farthest_elections_gurobi.py  gen-ref.sh  generate_elections.py  generate_reference.py  graph-representation.ipynb  greedy_dp.cpp  gurobi.ipynb  gurobi.py  heuristic_to_change_next_reference_metric.ipynb  heuristic_to_change_next_reference_metric.py  hlribm.sh  how_long_reference_is_better_metric.ipynb  how_long_reference_is_better_metric.py  htcrm.sh  iter_results.ipynb  map-experiments.ipynb  one-step-metric-report.ipynb  one_step_metric.py  report.py  results.ipynb  sfbe.sh  sfsp.sh  space_filling_big_elections.py  space_filling_heu_gen.py  space_filling_report.py  space_filling_report_big_elections.py  space_filling_report_summary.py  space_filling_starting_point.py  test.py
approval_l1/bindings/: numpy_bindings.cpp
approval_l1/include/: approvalwise_vector.hpp  brute.hpp  definitions.hpp  greedy_dp.hpp  pairs.hpp  utils.hpp
approval_l1/scripts/: algorithms.py  app_format.py  approvalwise_vector.py  basin_hopping.py  bindings.py  brute.cpp  comparator.cpp  comparator.py  comparisons_to_gurobi.cpp  distances.py  experiments.py  generator.cpp  generator.py  gurobi.py  sampling_methods.py
approval_l1/source/: approvalwise_vector.cpp  brute.cpp  greedy_dp.cpp  heuristic_to_change_next_reference.py  how_long_reference_is_better.py  pairs.cpp
approval_l1/src/: greedy_dp.cpp
